<resources>
    <string name="app_name">qrscanner</string>
    <string name="button">Button</string>
    <string name="send">send</string>
    <string name="post">POST</string>
    <string name="textview">TextView</string>
    <string name="text_to_post">Text to post</string>
    <string name="get">GET</string>
    <string name="send2">SEND</string>
    <string name="send3">Send</string>
</resources>